[package]
name = "excel-previewer"
version = "0.1.0"
authors = ["alienzj <alienchuj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
madato = "0.5.3"
serde = "1.0.104"
serde_derive = "1.0.104"
regex = "1.3.4"
clap = "2.33.0"
calamine = "0.16.1"

[[bin]]
name = "excel-previewer"
path = "src/main.rs"
