[package]
name = "excel-previewer"
version = "0.1.0"
authors = ["alienzj <alienchuj@gmail.com>"]
edition = "2018"

[dependencies]
madato = "0.5.3"
clap = "2.33.0"
calamine = "0.16.1"
comrak = "0.7.0"
html-minifier = "1.1.14"
htmlescape = "0.3.1"
lazy-static-include = "2.2.2"
lazy_static = "1.4.0"

[[bin]]
name = "excel-previewer"
path = "src/main.rs"
